fix: update mask related components z-index property

--- a/src/components/drawer/index.less
+++ b/src/components/drawer/index.less
@@ -9,7 +9,7 @@
 
   position: fixed;
   font-size: 14px;
-  z-index: 1;
+  z-index: 10;
 
   &--before-enter &__mask {
     position: static;
