--- a/src/components/modal/index.less
+++ b/src/components/modal/index.less
@@ -9,6 +9,7 @@
 
   position: fixed;
   font-size: 14px;
+  z-index: 10;
 
   &--before-enter &__mask {
     position: static;
